# wordy

./: CHANGELOG.md  package.yaml  wordy.cabal
src/: WordProblem.hs
test/: Tests.hs
