cabal-version: 2.4
name:          wordy
version:       0.1.0.0
author:        Λ
build-type:    Simple

library
  exposed-modules:  WordProblem
  other-modules:    Paths_wordy
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , parsec

  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  other-modules:    Paths_wordy
  hs-source-dirs:   test
  build-depends:
    , base
    , hspec
    , wordy

  default-language: Haskell2010
